-------------------------------------------------------------------
Fri Apr 30 18:27:29 CEST 2010 - werner@suse.de

- Add the option of recursive enabling all required services

-------------------------------------------------------------------
Wed Apr 28 15:29:23 CEST 2010 - werner@suse.de

- Use savannah as primary site

-------------------------------------------------------------------
Fri Feb 19 13:36:50 CET 2010 - werner@suse.de

- Adopt upstart-job patch to be able to support traditional sysv
  rc execution of upstart jobs. Patch from Petter Reinholdtsen.
- Defend against symlinks in init.d/ to other scripts in init.d/
  Patch from Kel Modderman found at the Debian SVN server.

-------------------------------------------------------------------
Sat Nov 14 20:50:10 CEST 2009 - pere@hungry.com

- Add simple test case checking the ordering of three scripts.  Run
  the test suite before installing.

-------------------------------------------------------------------
Wed Aug 19 12:07:58 CEST 2009 - werner@suse.de

- Use dependency sorting for scripts using $all

-------------------------------------------------------------------
Tue Aug 18 14:16:05 CEST 2009 - werner@suse.de

- Make $all available for stopping order

-------------------------------------------------------------------
Mon Aug 17 14:55:39 CEST 2009 - werner@suse.de

- Loops within /etc/insserv.conf are real errors
- The system facility $all is special

-------------------------------------------------------------------
Thu Jul 23 11:28:08 CEST 2009 - werner@suse.de

- Fix expansion of the system facilties

-------------------------------------------------------------------
Mon Jun 29 14:26:57 CEST 2009 - werner@suse.de

- Make it possible to mark a script as interactive in the LSB
  header its self (patch from Petter Reinholdtsen).

-------------------------------------------------------------------
Mon Mar  9 13:12:17 CET 2009 - werner@suse.de
