@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Fri May  7 17:15:02 CEST 2010 - werner@suse.de
+
+- Get the value instead the ``X-'' from interactive tag
+  this fix debian bug #580564
+
+-------------------------------------------------------------------
 Fri Apr 30 18:27:29 CEST 2010 - werner@suse.de
 
 - Add the option of recursive enabling all required services
